--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <title>Billion Dreams</title>
-    <link rel = "icon" href = "images/Billion-Dreams arow.png" type = "image/x-icon">
+    <link rel = "icon" href = "Billion-Dreams arow.png" type = "image/x-icon">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         role="button"
         href="#headerr">
         <span class="material-icons">
-          <img src="images/baseline_settings_black_24dp.png" alt="se">
+          <img src="baseline_settings_black_24dp.png" alt="se">
         </span>
       </a>
     </div>
@@ -49,7 +49,7 @@
               
             </button>
 
-            <a class="navbar-logo  col-sm-4 d-md-none " href="#"><img class="logo" src="images/Billion-Dreams-Logo-png.png" height="65px" width="265px" alt="" id="logo" >
+            <a class="navbar-logo  col-sm-4 d-md-none " href="#"><img class="logo" src="Billion-Dreams-Logo-png.png" height="65px" width="265px" alt="" id="logo" >
             </a>
                 
             <div class="col-md-4 collapse navbar-collapse justify-content-center" id="myNavbarToggler13">
@@ -300,7 +300,7 @@
               <div class="col-lg-4">
                 <div class="card">
                   <div class="face front-face">
-                    <img src="images/arun.jpg" alt="" class="profile">
+                    <img src="arun.jpg" alt="" class="profile">
                       <div class="pt-3 text-uppercase name">
                         Arun Arj 
                       </div>
@@ -329,7 +329,7 @@
               <div class="col-lg-4">
                 <div class="card">
                   <div class="face front-face">
-                    <img src="images/sunith.jpg" alt="" class="profile">
+                    <img src="sunith.jpg" alt="" class="profile">
                       <div class="pt-3 text-center text-uppercase name">
                         SUNITH EDAPPALLIL JOHNSON
                       </div>
